[package]
name = "rust-camelcase-php"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tree-sitter = "0.19"
tree-sitter-php = {git = "https://github.com/tree-sitter/tree-sitter-php.git", branch = "master" }
